deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  # Update pods with rolling update
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: httpd:latest
          ports:
            - containerPort: 80
          args:
            - /bin/sh
            - -c
            - echo "<!DOCTYPE html><html><body><h1>Welcome ${MY_POD_IP} - ${MY_POD_NAME}</h1></body></html>" > /usr/local/apache2/htdocs/index.html; echo 'ready' > /usr/local/apache2/htdocs/host.html; httpd-foreground
          resources:
            requests:
              memory: "64Mi"
              cpu: "128m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:
            failureThreshold: 1
            exec:
              command:
                - ls
                - /usr/local/apache2/htdocs/host.html
            initialDelaySeconds: 10
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
