haproxytech-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    haproxy.org/ingress.class: haproxy
    haproxy.org/cookie-persistence: route
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: myservice
              servicePort: 80
            path: /
