jcmoraisjr-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/session-cookie-name: route
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: myservice
              servicePort: 80
            path: /
